--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -503,6 +503,7 @@
                             @*<li><a href="../../Catalogos/Vista/Empresas.aspx">Gaseras</a></li>*@
                             <li>@Html.ActionLink("Gaseras", "Index", "Empresas")</li>
                             <li>@Html.ActionLink("Usuarios", "Index", "Usuarios")</li>
+                            <li>@Html.ActionLink("Roles", "Index", "Roles")</li>
                         </ul>
                     </li>
                 </ul>
