--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CentroCosto/CentroCosto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CentroCosto/CentroCosto.cshtml
@@ -1,21 +1,17 @@
 ﻿@model MVC.Presentacion.Models.Catalogos.CentroCostoModel
-@{
-
-}
 <!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>CentroCosto</title>
+    <title>Centro Costo</title>
     <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
 </head>
 <body style="padding-top:10px">
-    <section class="content home">
+    <section class="content">
         <div class="container-fluid">
             <div class="block-header">
                 <div class="row clearfix">
                     <div class="col-lg-5 col-md-5 col-sm-12">
-
                         <ul class="breadcrumb padding-0">
                             <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>
                             <li class="breadcrumb-item active">
@@ -28,7 +24,6 @@
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="card">
                             <div class="header">
-
                             </div>
                             <div class="body">
                                 <div class="row clearfix">
@@ -127,8 +122,8 @@
                                                 </select>
                                             </div>
                                             <Label ID="reqCamnioneta" class="alert-danger" hidden="hidden">Campo requerido</Label>
-                                        </div>*@
-                                    @*<div class="col-md-3 form-control-label">
+                                        </div>
+                                    <div class="col-md-3 form-control-label">
                                             <label for="ddlPipa">Pipa</label>
                                             <div class="form-group">
                                                 <select id="IdPipa" class="form-control z-index show-tick" disabled data-live-search="true">
@@ -137,8 +132,8 @@
                                                 </select>
                                             </div>
                                             <Label ID="reqPipa" class="alert-danger" hidden="hidden">Campo requerido</Label>
-                                        </div>*@
-                                    @*<div class="col-md-3 form-control-label">
+                                        </div>
+                                    <div class="col-md-3 form-control-label">
                                             <label for="ddlCilindroGas">Cilindro de Gas</label>
                                             <div class="form-group">
                                                 <select id="IdCilindroGas" class="form-control z-index show-tick" disabled data-live-search="true">
@@ -147,7 +142,6 @@
                                             </div>
                                             <Label ID="reqCilindro" CssClass="alert-danger" hidden="hidden">Campo requerido</Label>
                                         </div>*@
-
                                 </div>
                             </div>
                         </div>
